k8s/base/user-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-service
  labels:
    name: user-service
    environment: production
    istio-injection: enabled
  annotations:
    networking.istio.io/exportTo: "."
    topology.istio.io/network: kind
