k8s/base/user-service/user-service-dummy-svc.yaml
# user-service-dummy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user-service
spec:
  ports:
  - name: http-8000
    port: 8000
    targetPort: 8000
