k8s/base/user-service/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-self-namespace-and-istio
  namespace: user-service
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["user-service", "istio-system"]
